# realtimechess

./: .coveragerc  .eslintrc.js  .gitignore  .prettierrc.js  LICENSE  README.md  auth.py  auth_test.py  board.py  board_test.py  browser_test.py  constants.py  error.html  game.js  game_storage.py  index.html  integration_tests.py  login.html  minify.cmd  presubmit.py  protocol.py  pyproject.toml  realtimechess.py  realtimechess_test.py  requirements.txt  run_ai.py  stress_test.py  util.py  websocket_server.py
game/: constants.js  constants.min.js  game.css  game.js  game.min.js
