[tool.poetry]
name = "realtimechess"
version = "1"
description = ""
authors = ["Petter Strandmark <petter.strandmark@gmail.com>"]

[tool.poetry.dependencies]
python = "^3"
aiohttp = "^3.6.2"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
