[tool.poetry]
name = "realtimechess"
version = "1"
description = ""
authors = ["Petter Strandmark <petter.strandmark@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"
Jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
pytest = "^5.4.3"
selenium = "^3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
